feat: implement environment configuration system (TDD Green phase)
- Implement Config interface with type-safe structure
- Add getConfig() function with configuration caching
- Implement comprehensive validation for all config values
- Add support for .env files in development/test environments
- Add AWS Secrets Manager configuration (stub for MVP)
- Implement ConfigurationError class for clear error messages
- Add helper functions: isConfigured(), getConfigSafe(), validateConfig()
- Add clearConfigCache() for testing purposes
- Create .env.example file with documentation
- Handle both NEXT_PUBLIC_ and regular environment variables
- All 27 tests now pass (100% coverage of requirements)

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript-eslint": "^8.41.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.56.1"
+    "@supabase/supabase-js": "^2.56.1",
+    "dotenv": "^17.2.1"
   }
 }
