--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@eslint/js": "^9.34.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
@@ -35,6 +36,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
