--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@playwright/test": "^1.55.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@types/uuid": "^10.0.0",
