--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ES2022",
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./",
@@ -20,6 +20,12 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "tests/**/*", "supabase/**/*"],
+  "include": [
+    "src/**/*",
+    "tests/**/*",
+    "supabase/**/*",
+    "e2e/**/*",
+    "__tests__/**/*"
+  ],
   "exclude": ["node_modules", "dist"]
 }
