--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest --detectOpenHandles --forceExit",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "test:e2e:chromium": "echo 'No E2E tests configured yet'",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
