--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,6 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*",
-    "tests/**/*",
-    "supabase/**/*",
-    "e2e/**/*",
-    "__tests__/**/*",
-    "playwright.config.ts"
-  ],
+  "include": ["src/**/*", "tests/**/*", "supabase/**/*", "__tests__/**/*"],
   "exclude": ["node_modules", "dist"]
 }
